--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             if (opcao === '14/01/2025') {
                 document.getElementById('resultado').innerHTML = `
                     <div class="foto-container">
-                        <img src="https://ibb.co/RTSkhb2f" alt="Sua foto" class="foto">
+                        <img src="https://i.postimg.cc/dVsMRzGr/maymay.png" alt="Sua foto" class="foto">
                         <div class="fundo-branco"></div>
                         <p class="mensagem" style="display: none;">Eu te amo</p>
                     </div>
