--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <div class="foto-container">
                         <img src="https://i.postimg.cc/dVsMRzGr/maymay.png" alt="Sua foto" class="foto">
                         <div class="fundo-branco"></div>
-                        <p class="mensagem" style="display: none;">Eu te amo</p>
+                        <p class="mensagem" style="display: none;">Eu te amo ursinho</p>
                     </div>
                     <button class="botao" onmouseover="revelarFoto()">Aperte aqui</button>
                 `;
